--- a/_posts/2009-02-09-baghdad-wedding-preview.textile
+++ b/_posts/2009-02-09-baghdad-wedding-preview.textile
@@ -4,7 +4,7 @@ title: "Baghdad Wedding @ Belvoir: A quick review."
 ---
 p(meta). 9 Feb 2009 - Sydney
 
-I went and saw the <a href="http://www.belvoir.com.au/310_whatson_upstairs.php?production_id=224">Belvoir production of Baghdad Wdding</a> last night. I decided to subscribe again this year, because I really love the theatre and, well, it's something fun to do. Call it a last minute thought. The theatre was thankfully packed out, and it was a packed house for the second showing of the play. 
+I went and saw the <a href="http://www.belvoir.com.au/310_whatson_upstairs.php?production_id=224">Belvoir production of Baghdad Wedding</a> last night. I decided to subscribe again this year, because I really love the theatre and, well, it's something fun to do. Call it a last minute thought. The theatre was thankfully packed out, and it was a packed house for the second showing of the play. 
 
 Baghdad wedding is written by a British-Iraqi doctor, Hassan Abdulrazzak, centered around Salim, a British-Iraqi Doctor. All the characters are the children of exiled Iraqi intellectuals, and the play centers around the personal relationships and the childhoom memories of all the 20 something brits. 
 
