--- a/_posts/2009-02-10-double-check-locking.textile
+++ b/_posts/2009-02-10-double-check-locking.textile
@@ -4,7 +4,7 @@ title: "Double Checked Locking: keep it volatile & above 1.5"
 ---
 p(meta). Feb 10 2009
 
-So for a little while now, i've been encouraging people in the team to always use Double Checked Locking in java. Whats that you may ask? Well, in Java, getting a synchronized lock on things can be slow. A lot of code, including code in {% highlight java %} java.util.* {% endhighlight %} has points like this: 
+So for a little while now, i've been encouraging people in the team to always use Double Checked Locking in java. Whats that you may ask? Well, in Java, getting a synchronized lock on things can be slow. A lot of code, including code in <pre>java.util.*</pre> has points like this: 
 
 {%highlight java %}
 private Object expensive;
@@ -33,7 +33,7 @@ public Object getSomething() {
   return expensive;
 }
 {% endhighlight %}
-p. This results in a way to only get the lock, and it looks hunky dory. Well almost. Java has a memory model that allows the situation to get muddled, whereby if two different threads are running, and the JVM decides that some optimizations are better, the JVM is free to set the object reference on {% highlight java %} Object expensive {% endhighlight %} before the constructor has been fully called. Oops! Thats can be a disaster. 
+p. This results in a way to only get the lock, and it looks hunky dory. Well almost. Java has a memory model that allows the situation to get muddled, whereby if two different threads are running, and the JVM decides that some optimizations are better, the JVM is free to set the object reference on <pre>Object expensive</pre> before the constructor has been fully called. Oops! Thats can be a disaster. 
 
 So what are you supposed to do? Well, there are several idioms, but essentially, the problem is that the JVM has decided to optimise this beyond what it should. If you use Java >= 1.5 and use the volatile keyword, you can be guaranteed that the field is a barrier - and that you'll get it fully initialized; That is, in Java 1.5 and above, you can do the following to be safe: 
 
