post title changed, oopsie.

--- a/_posts/2009-02-19-tuesdays-with-morrie-ensembele-theatre.textile
+++ b/_posts/2009-02-19-tuesdays-with-morrie-ensembele-theatre.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The Holiday @ The Griffin Theatre.
+title: Tuesdays with Morrie @ The Ensemble Theatre.
 ---
 
 p(meta). 19 Feb. Sunny and nice.
