--- a/_posts/2009-03-26-travesties-surprisingly-boring.textile
+++ b/_posts/2009-03-26-travesties-surprisingly-boring.textile
@@ -7,5 +7,10 @@ p(meta). 26 March, half asleep in a play.
 
 Tom Stoppard. Goodness. a big name in theatre if ever there is one, and the stc is putting on <a href="http://en.wikipedia.org/wiki/Travesties">Travesties</a> at the Opera House. You'd think it would be really interesting, but my goodnesss, I haven't been bored like that in a play in years and years.
 
-Travesties is meant to be a bit of a funny play about Zurich in 1917, bringing together James Joyce, Valdimir Lenin & the Dadaist artist Tristian Tzara on screen at the same time, all told through the eyes of the then Britich Consul to Switzerland.
+Travesties is set in 1917 Zürich, when James Joyce, Vladimir Lenin and the founder of the Dada movement, Tristan Tzara. The play unfolds through the memory of the then British consulate employee, Henry Carr. Carr is a bit feeble, so his memories are a bit out of order. 
 
+The play is based on real events: Carr was in a production of The Importance of Being Earnest, and much of the play is framed around it. A lot of the play turns into philosophical discussions of art, socialism and literature, thanks to the fictional charactes. Stoppard becomes really clever and weaves iudeas together, becomes really clever: Stoppard makes hundreds of literary references, turns everything into a pun, and makes more clever references than one viewing could discover. 
+
+Thats exactly the problem. Taavesties is too clever for me, theres not enough of a plot, or drama, and the dense attempts at comedy and referencing literature take away from any personal message Stoppard may have had. I suppose that popular backdrop of the Vietnam War, and its parallels with Europe in 1917 would have made the play feel different when it was originally on. For me, though, I didn't feel anything really great in the play. Theres just nothing all that funny, and the english style of humour just didn't work for me. I guess it also explains why I was the youngest person in the audience by a good margin: Most of the audience was in their 50s or more, those that were there and know more of Stoppard than I do.
+
+The STC production is excellent though, tthe cast working really hard to get the play to work, and a spectacularly built rotating stage that doesn't get enough of a workout; The period setting is well done, and I think that the production lives up to what Stoppard would like it to be. I just didn't find it that funny. Not for me.
