--- a/_posts/2009-03-29-the-man-from-muckinupin-belvoir-goodness.textile
+++ b/_posts/2009-03-29-the-man-from-muckinupin-belvoir-goodness.textile
@@ -22,4 +22,4 @@ The production at the belvoir is excellent. The set looks rather barren at first
 
 The music is perfectly set with 2 musicians playing piano, double bass, tuba and a small organ in the side of the set. The interaction between the actors and the musicians is really fun, and the musos get in on the act: they're not hidden away in a pit, which is really terrific. The acoustics in the Belvoir are surprisingly good, and the players in the small space aren't all wired up for sound: you get to hear them being intimate around each other. It's really fun to watch, and I found myself waiting for song after song. It's worth mentioning Craig Annis as the lead role has a terrific voice, and really brings the show together. 
 
-Mukinupin is a really fun show to watch. The only criticism is that, including an interval, it runs to almost 3 hours, and it feels long at the end. I did see a preview though, and I suspect things will be great when the season actually starts. If you want to see a fun musical show, that talks about early Australian in an honest way, it's worthwhile. I really enjoyed it, almost as much as The Removalists, and I don't typically enjoy Musicals.
+Mukinupin is a really fun show to watch. The only criticism is that, including an interval, it runs to almost 3 hours, and it feels long at the end. I did see a preview though, and I suspect things will be great when the season actually starts. If you want to see a fun musical show, that talks about early Australian in an honest way, it's worthwhile. I really enjoyed it, almost as much as <a href="http://schonberger.org/2009/02/12/theremovalists-sydney-theatre.html">The Removalists</a>, and I don't typically enjoy Musicals.
