--- a/_posts/2009-04-02-public-transport-in-sydney-where-is-it-taking-me.textile
+++ b/_posts/2009-04-02-public-transport-in-sydney-where-is-it-taking-me.textile
@@ -1,19 +1,13 @@
 ---
 layout: post
-title: Ladybird, the 1st BSharp play in 2009
+title: Public transport rant of the day.
 ---
 
-p(meta). 31 March, on train home.
+p(meta). April Serious day (the 2nd)
 
-The Belvoir Downstairs theatre is one of my faviorate places to go and see theatre. The space is tiny, so theres never anything really commercial, but it's the blevoir, so things are well produced, with professional sets and actors, on really modern theatre. Every time I go I see the space used in a completely new way, with a really interesting and awakening play. 
+Public transport in Sydney is really light years ahead of some places in the world. Places like Palo Alto, Mukinupin and alice springs would dream of having a system as good. Me? I'm just dreaming of a system that works, and i'm astounded by the number of missteps that Sydneys public transport is making. 
 
-Ladybird is no exception to this rule. 
+My faivorate is some of the fun that Sydney Ferries has been giving me. It's by far the nicest way of getting anywhere in this city, catching a small harbour peaceful harbour cruise to get to work. But apparantely, the best way to make the ferry system is put it into private hands, according to its current management, is to sell and privatise it. Great idea to privatise, see how well it worked for the Cross City Tunnel? All that would happen is that the ferries would turn into their own super expensive toll network, and be a useless little trinket on our harbor, but when you do need one, they'd cost an arm and a leg. One of the thigns that makes networks like New York, San Francisco and Melbourne 'tick' is the ubiquity o a ticket. In Melbourne, a ticket will take you anywhere in town, as many trips as you'd like, within a 2 hour period. The smae goes in San Francisco. All that creating a separate network does is make commuters lives more difficult by having to pay several fiefdoms that don't want to talk to each other.
 
-Set in modern post soviet Russia, the play is an <i>extremely</i> dark comedy about the way that russian lives have moved since the end of communism. It's told through the eyes of Dima, a young man about to be conscripted tomorrow, and his friends who come over to celebrate with, or against him, that night. Everyone, even at such a young age, has a really dark side to them; Nobody in the play is truly happy, and everyone is portrayed as a narcissist to the extreme. I guess thats one of the things that makes the play funny: the charicatures on a few characters we know. 
-
-You watch Dimas last day of freedom crumble as he is constantly betrayed by his friends and family, and find out what really gives him hope to live his life. His father plays a small but pivotal role as both a wise narrator and paralletic alcoholic, clearly showing us how despair can take hold in modern russia. This play would be really pivotal there, where class differences in wealth, drinking problems, and the dilemmas faced by unwilling conscripts are real issues. It's hard to bring these across to Australian audiences without knowing the backgrounds. 
-
-The stage is set out incredibly well: Dimas' apartment is putrid and dirt filled, and you don't know how the actors can get out backstage. Of course, they can't, and the stage is full of actors asleep or high on something. Theres piles of furniure all around, so much that you can't understand how it all got into the theatre in the first place. It's a really cool layout, and the actors use the space really well.
-
-The only trouble, for me, is the plot : It's a little bit too perfectly bad; Every character is so deeply flawed, so completely beyond redemption, that it's just too good to be true. I couldn't suspend my disbelief for the whole play, but thats ok, because it's only an hour or so long, so you don't really have to. Good fun to see.
+The proof is already around in Sydney: have a look at the Metro Light Rail. This is a single line that goes meandering through Syneys inner west, from Central to Lilyfield. It's privately owned, though, so two things have happened. Firstly, the ticket for the light rail are separated: people like me need to
 
