--- a/_posts/2009-04-02-public-transport-in-sydney-where-is-it-taking-me.textile
+++ b/_posts/2009-04-02-public-transport-in-sydney-where-is-it-taking-me.textile
@@ -7,13 +7,13 @@ p(meta). April Serious day (the 2nd)
 
 Public transport in Sydney is really light years ahead of some places in the world. Places like Palo Alto, Mukinupin and Alice springs would dream of having a system as good. Me? I'm just dreaming of a system that works, and I'm astounded by the number of missteps that Sydney's public transport is making. 
 
-My faivorate is some of the fun that Sydney Ferries has been giving me. It's by far the nicest way of getting anywhere in this city, catching a small harbour peaceful harbour cruise to get to work. But apparantely, the best way to make the ferry system is put it into private hands, according to its current management, is to sell and privatise it. Great idea to privatise, see how well it worked for the Cross City Tunnel? All that would happen is that the ferries would turn into their own super expensive toll network, and be a useless little trinket on our harbor, but when you do need one, they'd cost an arm and a leg. One of the things that makes networks like New York, San Francisco and Melbourne 'tick' is the ubiquity o a ticket. In Melbourne, a ticket will take you anywhere in town, as many trips as you'd like, within a 2 hour period. The same goes in San Francisco. All that creating a separate network does is make commuters lives more difficult by having to pay several fiefdoms that don't want to talk to each other.
+My favorite is some of the fun that Sydney Ferries has been giving me. It's by far the nicest way of getting anywhere in this city, catching a small harbour peaceful harbor cruise to get to work. But apparantely, the best way to make the ferry system is put it into private hands, according to its current management, is to sell and privatise it. Great idea to privatise, see how well it worked for the Cross City Tunnel? All that would happen is that the ferries would turn into their own super expensive toll network, and be a useless little trinket on our harbor, but when you do need one, they'd cost an arm and a leg. One of the things that makes networks like New York, San Francisco and Melbourne 'tick' is the ubiquity o a ticket. In Melbourne, a ticket will take you anywhere in town, as many trips as you'd like, within a 2 hour period. The same goes in San Francisco. All that creating a separate network does is make commuters lives more difficult by having to pay several fiefdoms that don't want to talk to each other.
 
 The proof is already around in Sydney: have a look at the Metro Light Rail. This is a single line that goes meandering through Sydney's inner west, from Central to Lilyfield. It's privately owned, though, so a few things have happened. 
 
 Firstly, the ticket for the light rail is separate: you can't buy a combined ticket for the light rail. Period. Every other form of public transport in Sydney lets you have a single ticket to carry around, one ticket booth to buy them all at, and a simple brain-less way of getting on. The Light rail, not so much. 
 
-Secondly, It's ridiculously expensive. The Light Rail costs $4.2 for a single trip from Central to Pyrmont, which is really steep. Sure, a weekly is cheaper, but why on earth is it so much? Well, who knows, maybe theres a consultant who suggested that was the optimal price which would give the most revenue. It doesn't help people get out of the car, and it certainly doesn't encourage using the train and bus system together.
+Secondly, It's expensive. The Light Rail costs $4.2 for a single trip from Central to Pyrmont, which is really steep. Sure, a weekly is cheaper, but why on earth is it so much? Well, who knows, maybe theres a consultant who suggested that was the optimal price which would give the most revenue. It doesn't help people get out of the car, and it certainly doesn't encourage using the train and bus system together.
 
 And finally: the customer service is different. Theres a crazy old school ticket seller on the tram, and 3 guys at Central selling tickets by hand sometimes. Theres just no reason for that cost over head if you were to have the same ticketing system as the rest of the network. A similar set of arguments works for the Airport tunnel, too.
 
