fix to compile yaml

--- a/_posts/2009-04-19-kafkas-monkey-letters-to-the-academy.textile
+++ b/_posts/2009-04-19-kafkas-monkey-letters-to-the-academy.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Kafkas Monkey: A real letter to the academy.
+title: Kafkas Monkey - a real letter to the academy.
 ---
 
 p(meta). DVD weekend!
