--- a/_posts/2009-04-19-kafkas-monkey-letters-to-the-academy.textile
+++ b/_posts/2009-04-19-kafkas-monkey-letters-to-the-academy.textile
@@ -5,7 +5,7 @@ title: Kafkas Monkey - a real letter to the academy.
 
 p(meta). DVD weekend!
 
-Dear esteemed members of the academy, let me tell you about the play that I saw today. I learned, from an ape, how and why he became human; I saw a the really amazing production, all the way from London, of <a href="http://www.sydneytheatre.com.au/2009/tickets/add-ons/kafkas-monkey">Kafka's Monkey</a>, which is a terrific adaptation of Franz Kafkas' story, <a href="http://en.wikipedia.org/wiki/A_Report_to_an_Academy">. 
+Dear esteemed members of the academy, let me tell you about the play that I saw today. I learned, from an ape, how and why he became human; I saw a the really amazing production, all the way from London, of <a href="http://www.sydneytheatre.com.au/2009/tickets/add-ons/kafkas-monkey">Kafka's Monkey</a>, which is a terrific adaptation of Franz Kafkas' story, <a href="http://en.wikipedia.org/wiki/A_Report_to_an_Academy"> A report to an academy</a>. 
 
 Kathryn hunter is on stage for no more than an hour, and convinces you she's an ape from the first instant she shuffles onto stage. I was hanging off of every word, learning from Kathryn how, and more importantly, why, she decided to become Human. the answers may surprise you. 
 
