--- a/_posts/2009-05-14-back-to-it.textile
+++ b/_posts/2009-05-14-back-to-it.textile
@@ -5,7 +5,7 @@ title: Back to business
 
 p(meta). Sydney, contemplating.
 
-At the beginning of the year I promised myself that i'd write a journal really often, but theres a certain responsibility of people seeing your emtions right now. I want to come back to this promise, and just to write about the things that I enjoy. Whats my motivstation now? 
+At the beginning of the year I promised myself that I'd write a journal really often, but there's a certain responsibility of people seeing your emotions right now. I want to come back to this promise, and just to write about the things that I enjoy. What's my motivation now? 
 
 Jordan Mechner is publishing his journal from the 1980s to 1991 so far. Jordan is the guy behind Prince of Persia, the classic of classics, and he's publishing his journal from the time. What an amazing experience: to o read back with what we know about that game now. Every few days I check back, and read the memoirs of a young man so full of self doubt, and full of dreams for his future. HE's worried about things, worried about money, life; Hell, he's even taking drugs and bonding with employees over a joint. I just remember being a little boy playing this amazing game and swordfighting. Oh, you might want the <a href="http://jordanmechner.com/old-journals/">Jordan Mechner journals archive</a>. So, this is one guy with a journal. 
 
@@ -13,6 +13,6 @@ Then, i'm reading <a href="http://www.amazon.com/Sylvia-Leonard-Michaels/dp/1562
 
 I want to be able to come back in 30 years or so, or maybe 10, or 20, and read over what I was thinking, and how I was thinking. Is doing it in a public forum in real time the best thing to do? Maybe. 
 
-So right now, whats my life? Lots of hard work fixing up problems on my current project. Making sure the details work out and fixing every little problem lest it turn into a big one. It's my birthday today, and I'm at the parents having some dinner. I have a bread machine. Read 45 apages of Sylvia on the bus today, really inspiring prose. Michaels paints a picture of New York in 1962 of all sors of junkies, criminals and general charicatures of people; Who knows how much is real, but it's beautiful, romantically painful to read how he <i>knows</i> his wife is insane, but can't see the way out, or feels trapped by pivotal moments, which still clearly haunt him years and years later. 
+So right now, what's my life? Lots of hard work fixing up problems on my current project. Making sure the details work out and fixing every little problem lest it turn into a big one. It's my birthday today, and I'm at the parents having some dinner. I have a bread machine. Read 45 pages of Sylvia on the bus today, really inspiring prose. Michaels paints a picture of New York in 1962 of all sorts of junkies, criminals and general caricatures of people; Who knows how much is real, but it's beautiful, romantically painful to read how he <i>knows</i> his wife is insane, but can't see the way out, or feels trapped by pivotal moments, which still clearly haunt him years and years later. 
 
 Someone at work inspired me yesterday because they knew what their priorities were to make them happy. That was awesome. And this is making me happy.
