the actual file to upload

--- a/_posts/2009-05-17-half-marathon.textile
+++ b/_posts/2009-05-17-half-marathon.textile
@@ -1,14 +1,17 @@
 ---
 layout: post
-title: Good books - whats the line?
+title: 
 ---
 
-p(meta). Sydney, reading.
+p(meta). Half Marathon afterglow.
 
-One of the common things about good books is that they draw you in to feel compassion to the characters in the books. That's one of the basic things they teach in author school, I suppose. 
+I ran the Sydney Morning Herald Half Marathon this morning. I've been doing this for about 3 years now, twice a year; 
 
-I'm reading <A href="http://www.amazon.com/Sylvia-Novel-Leonard-Michaels/dp/0374271070" >Sylvia</a> right now, and every now and then, I don't just feel empathy for Leonard, I feel as if we've got the same experience. And it all makes me do is wonder: is it good writing, or do we really have everything in common? Am I being drawn in by a brilliant writer, or is it just that he and I think the same way, have had the same things happen to us? 
+Running a half marathon twice a year is pretty much the right amount of time, since it allows you to completely forget how painful the last one was, how much of a pain in the butt it is to get somewhere by 7am on a sunday morning, and how exhausted you feel at the end of it. 
 
-I'm not sure. I'm guessing it's more that he's a brilliant writer who knows how to press my buttons, than anything else. After all, I don't know any drug dealers, I'm not a literature lecturer, and I'm not married to a crazy woman who commits suicide.
+Right now, my legs are like Brie cheese - soft and melty; They feel numb as anything. I saw hundreds of people hobbling away from the finish line, quietly getting on the buses and trains at a normal time of day. Theres some 24 hour nightclub on the route where people are partying and dancing all night. And some gentlemens club promoted themselves on the track by offering free lap-dance breaks while running. 
 
+It's kind of a weird subculture, this whole running thing. There are dozens of clubs, and hundreds of causes. A lot of cancer and healthcare charities have fundraisers at the half marathon. Thousands of people are wearing a singlet for a cause: Can-Too , The Nicole McGrath Foundation, Premature babies, etc. I don't know why they all latch on to long distance running as something inspiring. I guess because it's something thats hard to do but yet within reach of so many people. 
+
+Either way, I ran a PB today. It helps to have had a good nights sleep the night before (by a good night, I mean 6 hours...). Will do even better next time.
 
