--- a/_posts/2009-06-24-august-osage-county.textile
+++ b/_posts/2009-06-24-august-osage-county.textile
@@ -5,7 +5,12 @@ title: August: Osage County At the Music Box in New York
 
 p(meta). On the plane to SF
 
-I haven't seen that much theatre in the last month, well, because i've been in the states. Being in New York got me back into it, and along with Adam and Alan I went into see the Tony winning <A href="http://www.augustonbroadway.com/">August: Osage County</A>. I wasn't dissapointed, even though I was warned that the play lasts <em>three and a half</em> hours.
+I haven't seen that much theater in the last month, well, because I've
+been in the states. Being in New York got me back into it, and along
+with Adam and Alan I went into see the Tony winning <A
+href="http://www.augustonbroadway.com/">August: Osage County</A>. I
+wasn't disappointed, even though I was warned that the play lasts
+<em>three and a half</em> hours.
 
 August tracks the life of a large, and dysfunctional, extended family
 centered around Violet, the matriarch of the family. After a crisis,
@@ -22,25 +27,25 @@ of the family has their own little quirks, but really, we see Violet
 and her daughters struggling to keep and maintain a relationship.
 
 The beginning of the play starts off with a terrific monologue from
-Violes husband, Beverly, as he hires a live in housekeeper. She's a
-native american indian, and the only one through the play who isn't a
+Violets husband, Beverly, as he hires a live in housekeeper. She's a
+native American Indian, and the only one through the play who isn't a
 part of the family. She lives in the attic, watching over the family
 in a spiritual way. The question for her becomes why she stays working
 in the family home with all the mania around her.
 
-Theres a central crisis that brings the family together, which I won't
+There's a central crisis that brings the family together, which I won't
 spoil here, but it pushes Violet over the edge into a cruel
-personality. How the family reacts is amazing, moreso for proving how
-resiliant families can be in a crisis than for anything else. Violet
-finds herself loved and hated by her entire family, and it's surprisng
+personality. How the family reacts is amazing, more so for proving how
+resilient families can be in a crisis than for anything else. Violet
+finds herself loved and hated by her entire family, and it's surprising
 to see how the play ends.
 
 I guess I have tried to avoid the obvious point to make here, which is
 that the cast made this play really incredible. Violet is played by
 Phylicia Rachad, recognizable for being Bill Cosby's wife in 'The
-Cosby Show', her sister is Elizabeth Ahsley. John cullum plays her
-husbund superbly (and his monologue is worth the ticket price alone)
+Cosby Show', her sister is Elizabeth Ashley. John Cullum plays her
+husband superbly (and his monologue is worth the ticket price alone)
 . The housekeeper is Kimberly Guerrero, who I recognize from Northern
 Exposure & Seinfeld (as the Indian Girlfriend)
 
-The hours pass by quickly, and I barely noticed I was there for more than three hours. A really good show to see, and not one that will leave a hollywood smile type ending on your face.
+The hours pass by quickly, and I barely noticed I was there for more than three hours. A really good show to see, and not one that will leave a Hollywood smile type ending on your face.
