fix for silly : stuff

--- a/_posts/2009-06-24-august-osage-county.textile
+++ b/_posts/2009-06-24-august-osage-county.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: August: Osage County At the Music Box in New York
+title: August, Osage County At the Music Box in New York
 ---
 
 p(meta). On the plane to SF
