fix spelling and stuff.

--- a/_posts/2009-07-13-the-promise-at-the-belvoir.textile
+++ b/_posts/2009-07-13-the-promise-at-the-belvoir.textile
@@ -1,16 +1,16 @@
 ---
 layout: post
-title: Review of 'The Promise' at Belvoir St Theatre.
+title: Review of 'The Promise' at Belvoir St Theater.
 ---
 
 p(meta). Lunch @ Work
 
-<a href="http://www.belvoir.com.au/310_whatson_upstairs.php?production_id=227">The promise</a> is an adaptation of Aleksei Abruzov's The Promise. I think the original may have been called <em>My Poor Marat</a> instead, but thatsn ot important here. The Promise is part of this revival of plays and movies set in world war two, and this time, it's in leningrad. 
+<a href="http://www.belvoir.com.au/310_whatson_upstairs.php?production_id=227">The promise</a> is an adaptation of Aleksei Abruzov's The Promise. I think the original may have been called <em>My Poor Marat</em> instead, but thats not important here. The Promise is part of this revival of plays and movies set in world war two, and this time, it's in Leningrad. 
 
 We meet Marat, and Linka as teenagers surviving in Leningrad during the winter of 1942. They're poor, on the brink of starvation, surrounded by death and misery. They're young, hopeful, and Marat is idealistic; They're united in the same time and space, and truly love each other; As things happen, though, they have a chance visitor, another teen, Leonidik, who joins them on the brink of death; The three live through the winter, and their bond is kept strong. 
 
-Theres only 3 characters in the play, and they're wonderfully human. Lika is a likeable, emotional and caring woman; She loves both Marat and Leonidik, and feels a bond with both of them. Marat is a headstrong believer in the socialist system, strong, idealistic, and always pushing himself to be a better man. He is headstrong, driven, and has trouble sharing his emotions. Leonidik is, of course, the opposite. A poet, a drunk, someone who looks for true beauty in the world. Lika loves them both, and the two men admire each other, despite vying for her affections. The love triangle of the play is set in the first act, and, in subsequent years in the play after, we see how it all pans out. I won't spoil who gets the girl, and how.
+There are only 3 characters in the play, and they're wonderfully human. Lika is a likeable, emotional and caring woman; She loves both Marat and Leonidik, and feels a bond with both of them. Marat is a head-strong believer in the socialist system, strong, idealistic, and always pushing himself to be a better man. He is head-strong, driven, and has trouble sharing his emotions. Leonidik is, of course, the opposite. A poet, a drunk, someone who looks for true beauty in the world. Lika loves them both, and the two men admire each other, despite vying for her affections. The love triangle of the play is set in the first act, and, in subsequent years in the play after, we see how it all pans out. I won't spoil who gets the girl, and how.
 
-The characters are strong, well acted by a really good Australian cast. Ewen Leslie is Marat, and Sydney audiences will recognise him from a lot of productions; I remember him most from this years 'War of the Roses'. Though the play really talks about love, Abruzov uses the conflict between the two men as a way of debating philospohical differences in how to live life, and what it takes to be happy in this world. Theres a brilliant melancholy in the play, and a really hopeful attitude, despite the fact the overall mood is really sad. 
+The characters are strong, well acted by a really good Australian cast. Ewen Leslie is Marat, and Sydney audiences will recognize him from a lot of productions; I remember him most from this years 'War of the Roses'. Though the play really talks about love, Abruzov uses the conflict between the two men as a way of debating philosophical differences in how to live life, and what it takes to be happy in this world. Theres a brilliant melancholy in the play, and a really hopeful attitude, despite the fact the overall mood is really sad. 
 
-I'd say it's worth seeing, if you're in the mood for a more serious, traditional exposure to russian theatre. If only for the cultural and historical moments it's worth it. The real let down of this production is the staging. Theres an enormous rotation stage, that, in some scenes, rotates non stop, giving differing views of the characters looking at each other, but really exhausting and dizzying. It also means that the stage has a huge step on it, and the actors walk about the stage going on and off this foot high step as if nothing is there; It's not convincing, and though I can understand the desire to have this rotating element, it somehow doesn't work and gets in the way for most of the play. If you go in expecting the staging to be, well, less than perfect, you'll enjoy yourself. The actors really give everything they've got for the characters, and they're brilliant. Don't expect a happy, simple, hollywood ending.
+I'd say it's worth seeing, if you're in the mood for a more serious, traditional exposure to Russian theater. If only for the cultural and historical moments it's worth it. The real let down of this production is the staging. Theres an enormous rotation stage, that, in some scenes, rotates non stop, giving differing views of the characters looking at each other, but really exhausting and dizzying. It also means that the stage has a huge step on it, and the actors walk about the stage going on and off this foot high step as if nothing is there; It's not convincing, and though I can understand the desire to have this rotating element, it somehow doesn't work and gets in the way for most of the play. If you go in expecting the staging to be, well, less than perfect, you'll enjoy yourself. The actors really give everything they've got for the characters, and they're brilliant. Don't expect a happy, simple, Hollywood ending.
