--- a/_posts/2009-08-24-saturns-return-in-sydney.textile
+++ b/_posts/2009-08-24-saturns-return-in-sydney.textile
@@ -1,14 +1,16 @@
 ---
 layout: post
-title: Follower counts, and do they matter?
+title: Saturns Return, my review from the 2009 Production
 ---
 
-p(meta). In Sydney, sunny warm winters day.
+p(meta). Warmest august ever.
 
-I've got an account on a couple of these <a href="http://en.wikipedia.org/wiki/Social_network_service">Social Networks</a>, and they all have something slightly different about the way they work; E.g., Twitter has this limit on the length of messages, Facebook has <em>friends</em> and not <em>followers</em>. Lots of people have talked about how that affects interaction. There are some things, though, that change the way that people interact that are very simple. 
+Yesterday afternoon, I saw <a href="http://www.sydneytheatre.com.au/2009/saturnsreturn">Saturn's Return</a> at the Wharf theater. Talk about having a bit of a mind screwup. the play centers around Zara, a 29 year old Sydney woman living with her boyfriend Matt in inner city Sydney; They're professionals, successful; They left school ten years ago, graduated from UNSW, go out to a big rotating bar in the middle of town.
 
-all these social networks let you see the number of friends, or the number of followers that you've got. For instance, on Friendfeed, you can see <a href="http://friendfeed.com/robsc/">my page</a> and see my statistics. You can do the same on twitter too. Fine. Twitter does something that facebook and friendfeed currently don't do: they show someone's statistics, the number of followers, as soon as they log in. Thats not such a big deal, except, it lets people put on a metric; It's also prominent whenever you look at someone's history page. 
+Then there's me, Robert, a 29 year old living in Sydney, professional, graduated from UNSW, left school just over 10 years ago. The rotating bar in town is one that I know about and went to a few times, and I know it well. Talk about a play speaking to me, this thing was about as close to home as theater could get for me. The plays title is an obvious reference to the <A href="http://en.wikipedia.org/wiki/Saturn_return">Saturn Return</a>, a name in astrology for a predict hard test of character that happens just before 30. Zara and Matt are going through that stage, they're having fun, living together, enjoying sex and being spontaneous, almost adolescent. They live in sexual fantasies, and are truly happy. Or, well, so it seems. 
 
-What does this mean? Well, you get to see people competing for the number of followers. Indeed, the question "How many followers do you have" is one that twitter users ask every now and then. I haven't heard people who use other systems ask that nearly as often. That mens that people try to get more 'friends' more actively on twitter than the other networks. Facebook does this now by suggesting people to add (they've been suggesting my friends mothers for the last few days). 
+Zara and Matt talk about buying an apartment, looking at the future, and the cracks seem to appear; Slowly, surely, it turns out that they're not as in tune as they thought they were. Why? who knows. All this time the writing is witty, fresh, raunchy and honest;
 
-It's really subtle, but I think that this very small change feeds peoples subtle pleasure centers; Twitter users love having hundreds of followers; People on facebook don't care as much today how many 'friends' they have. It changes the conversation, and it changes, subtly, the motivation people have for using a system. I guess it's why people have been adding more and more twitter accounts, because, well, theres this subconscious pleasure center that loves having 150 followers more than having 100 followers. If you disagree, please get in touch;
+The play starts out realistic, with Matt and Zara bearing their hearts out on stage, as couples do; You expect the realism to continue, but the play slowly drifts into fantasy, further, and funnier, from the reality of the relationship between them. So much so, that for the last 15 minutes, I had no idea what was real, and what was in some lala drug induced land of fantasy, until the last couple of minutes grounded the audience again. Turns out there were no drugs involved, but it was fun while it lasted. I ended up feeling very drawn in to the two, thinking that I've seen and heard these stories over and over, and I guess I'm one of them, in a lot of ways. Worth seeing, and it's only one and a half hours, so it's really easy to see, and doesn't get boring for an instant, and almost feels like two short plays, rather than one.
+
+The staging is excellent, with a rotating stage of multiple rooms, that shifts perfectly between scenes, between rooms, times and locations; There's an impressive and awesome collection of toys in their apartment at the start, and keep a look out for the genuine Thom Yorke signed Radiohead poster; I want one!
