written, spell checked.

--- a/_posts/2009-08-26-the-lonesome-west-belvoir.textile
+++ b/_posts/2009-08-26-the-lonesome-west-belvoir.textile
@@ -1,16 +1,15 @@
 ---
 layout: post
-title: Saturns Return, my review from the 2009 Production
+title: The Lonesome West, at the Belvoir.
 ---
 
-p(meta). Warmest august ever.
+p(meta). Chinese noodles on the way.
 
-Yesterday afternoon, I saw <a href="http://www.sydneytheatre.com.au/2009/saturnsreturn">Saturn's Return</a> at the Wharf theater. Talk about having a bit of a mind screwup. the play centers around Zara, a 29 year old Sydney woman living with her boyfriend Matt in inner city Sydney; They're professionals, successful; They left school ten years ago, graduated from UNSW, go out to a big rotating bar in the middle of town.
+Martin McDonagh is a genius. There, I said it. The Lonesome west is so outrageously funny, yet full of wit, insights and good characters that I'm still in awe. Add to that an excellent production & cast, and thats basically what the production of The Lonesome West was at the Downstairs theater last night. 
 
-Then there's me, Robert, a 29 year old living in Sydney, professional, graduated from UNSW, left school just over 10 years ago. The rotating bar in town is one that I know about and went to a few times, and I know it well. Talk about a play speaking to me, this thing was about as close to home as theater could get for me. The plays title is an obvious reference to the <A href="http://en.wikipedia.org/wiki/Saturn_return">Saturn Return</a>, a name in astrology for a predict hard test of character that happens just before 30. Zara and Matt are going through that stage, they're having fun, living together, enjoying sex and being spontaneous, almost adolescent. They live in sexual fantasies, and are truly happy. Or, well, so it seems. 
+<a href="http://en.wikipedia.org/wiki/The_Lonesome_West">The Lonesome West</a> follows the tale of two brothers, Valentine and Coleman, from the day of their fathers funeral, after being killed in a shotgun accident. They drink, curse, and hate each other. the local priest, Father Welsh, is an alcoholic, joins them and tries to mend their relationship. On top of this, Girleen, the local moonshine delivery girl, a high school girl who loves flaunting her sexuality, toys with all three. Someone else in the town dies, and this causes a crisis of faith in the priest, along with more fighting between the two brothers. I'm not going to write much more about the plot here, save to say that it's surprising, twists, and part of the laughter comes from the surprise. If you want to know the plot, check out the Wikipedia article.
 
-Zara and Matt talk about buying an apartment, looking at the future, and the cracks seem to appear; Slowly, surely, it turns out that they're not as in tune as they thought they were. Why? who knows. All this time the writing is witty, fresh, raunchy and honest;
+The production in Sydney is excellent- Toby Schmitz and Travis Cotton as the brothers are both vastly different personalities, and yet so obviously brothers. Their hate against each other comes naturally, and their delivery of the comedy is spot on; Ryan Johnson as the priest is great as a man who's in constant doubt, which is what he is supposed to be. Girleen, though a small character, is played by Sibylla Budd very deftly, twisting the men on stage to her will. All four interact well on the stage, let each other control the dialogue without stealing it. Toby Schmitz particularly impressed me, because I just saw him in <a href="http://www.belvoir.com.au/340_whatson_archive.php?production_id=226">Ruben Guthrie</a> a few months ago, playing a completely different, youthful, weak character. the stage is minimal, letting the actors work. Notably, a large cross with a shotgun forms the centerpiece of the home of the two brothers. 
 
-The play starts out realistic, with Matt and Zara bearing their hearts out on stage, as couples do; You expect the realism to continue, but the play slowly drifts into fantasy, further, and funnier, from the reality of the relationship between them. So much so, that for the last 15 minutes, I had no idea what was real, and what was in some lala drug induced land of fantasy, until the last couple of minutes grounded the audience again. Turns out there were no drugs involved, but it was fun while it lasted. I ended up feeling very drawn in to the two, thinking that I've seen and heard these stories over and over, and I guess I'm one of them, in a lot of ways. Worth seeing, and it's only one and a half hours, so it's really easy to see, and doesn't get boring for an instant, and almost feels like two short plays, rather than one.
+I could go into an analysis of the play, but I won't. Lots of thoughts based on religious education  come into my head, particularly the stories of the love between two brothers that forms the legend of Mount Moriah, but I don't want to talk this one to death. It's an excellent play, really well put on. The Downstairs theater is tiny too, so you are up close with the actors. Worth every penny. I hope that they put this production, with this cast, on again at a larger venue. They deserve it.
 
-The staging is excellent, with a rotating stage of multiple rooms, that shifts perfectly between scenes, between rooms, times and locations; There's an impressive and awesome collection of toys in their apartment at the start, and keep a look out for the genuine Thom Yorke signed Radiohead poster; I want one!
